<resources>
    <string name="app_name" translatable="false">FuelSpotAdmin</string>
    <string name="password" translatable="false">******</string>
    <string name="fuelspot_api_key" translatable="false">Ph76g0MSZ2okeWQmShYDlXakjgjhbe</string>
    <string name="g_api_key" translatable="false">AIzaSyAxBaDtIoC8T8SFKAVmEMvWAbph_ChSD1E</string>

    <string name="unitSystem1">Litre</string>
    <string name="unitSystem2">Galon</string>
    <string name="unitSystem3">Imperial galon</string>
    <string name="exit">Tekrar çıkmak için dokunun</string>
    <string name="login">Giriş</string>
    <string name="username">kullanıcıadı</string>
    <string name="signinIn">Giriş yapılıyor</string>
    <string name="pleaseWait">Lütfen bekleyiniz…</string>
    <string name="login_fail">Kullanıcı adı ya da şifre yanlış</string>
    <string name="login_success">Giriş başarılı. Ekibe hoşgeldin!</string>
    <string name="welcome">FuelSpot ekibine hoşgeldin !</string>
    <string name="welcomeText">FuelSpot ekibine katıldığın için oldukça mutluyuz. Bu ve sonraki ekranlarda sana ne yapman gerektiğini anlatacak infografikler göreceksin…</string>
    <string name="welcomeSubText">Giriş işlemi başarıyla tamamlandı. Halletmemiz gereken son bir şey kaldı…</string>
    <string name="continueTo">Devam</string>
    <string name="fullname">Ad - Soyad</string>
    <string name="email">E-posta</string>
    <string name="phone">Telefon</string>
    <string name="location">Konum</string>
    <string name="birthday">Doğum günü</string>
    <string name="sex">Cinsiyet</string>
    <string name="male">Erkek</string>
    <string name="female">Kadın</string>
    <string name="transsexual">Other</string>
    <string name="passwordTitle">Şifre</string>
    <string name="settings_saved">Ayarlar kaydedildi</string>
    <string name="edit_profile">Profili düzenle</string>
    <string name="error_no_location">Konumunu tespit edemedik. Lütfen ayarlarını kontrol et ve tekrar dene.</string>
    <string name="error_permission_cancel">İzinler reddedildi&#8230;</string>
    <string name="save">Kaydet</string>
    <string name="connection_error">Sunucuyla olan bağlantın koptu. Lütfen tekrar dene…</string>
    <string name="waiting_approval">Onay bekleniyor</string>
    <string name="waiting_approval_text">Hesabınız henüz onaylanmamış. Lütfen yöneticiniz ile iletişime geçiniz.</string>
    <string name="update">Güncelle</string>
    <string name="stationUpdated">İstasyon bilgileri başarıyla güncellendi.</string>
    <string name="stationUpdateFail">Bir hata oluştu. Lütfen tekrar deneyiniz…</string>
    <string name="uAreNotAtStation">Şu an bir istayonda değilsiniz…</string>
    <string name="no_internet">İnternet bağlantınızda bir sorun bulunmakta. Lütfen ayarlarınızı kontrol edip tekrar deneyiniz…</string>
    <string name="address">Adres</string>
    <string name="licenseNO">Lisans no</string>
    <string name="stationVerified">Onaylı istasyon</string>
    <string name="mobilePayment">Mobil ödeme</string>
    <string name="fuelDelivery">Alo yakıt</string>
    <string name="stationVerifiedText">Bu istasyon FuelSpot tarafından onaylanmıştır.</string>
    <string name="facilities">Tesisler</string>
    <string name="profileUpdated">Profil güncellendi…</string>
    <string name="noOwner">SAHİP YOK</string>
    <string name="gasoline">Benzin</string>
    <string name="diesel">Dizel</string>
    <string name="lpg">LPG</string>
    <string name="electricity">Elektrik</string>
    <string name="title_activity_add_stations">AddStations</string>

    <!-- ADMIN APIs -->
    <string name="API_ADMIN_LOGIN" translatable="false">https://fuelspot.com.tr/api/v1.0/admin/login.php</string>
    <string name="API_ADMIN_UPDATE" translatable="false">https://fuelspot.com.tr/api/v1.0/admin/update.php</string>
    <string name="API_ADMIN_ADD_STATION" translatable="false">https://fuelspot.com.tr/api/v1.0/admin/station-add.php</string>
    <string name="API_ADMIN_SEARCH_STATION" translatable="false">https://fuelspot.com.tr/api/v1.0/admin/station-search.php</string>
    <string name="API_ADMIN_UPDATE_STATION" translatable="false">https://fuelspot.com.tr/api/v1.0/admin/station-update.php</string>

    <!-- OTHER APIs -->
    <string name="OTHER_COMPANY" translatable="false">https://fuelspot.com.tr/api/v1.0/other/company.php</string>
</resources>
