<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background_marker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_layout_white"
    android:gravity="center"
    android:padding="2dp">

    <RelativeLayout
        android:id="@+id/marker_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/station_logo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/default_station"
            app:civ_border_color="#ff0000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/station_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/station_logo"
            android:layout_alignStart="@id/station_logo"
            android:layout_alignEnd="@id/station_logo"
            android:layout_margin="2dp"
            android:fontFamily="@font/gotham_black"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#212121" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/infoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/marker_layout">

        <TextView
            android:id="@+id/stationId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/gotham_black"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#212121" />

        <ImageView
            android:id="@+id/gasoline"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@+id/stationId"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/gasoline"
            android:padding="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:srcCompat="@drawable/gasoline" />

        <TextView
            android:id="@+id/priceGasoline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gasoline"
            android:layout_alignStart="@id/gasoline"
            android:layout_alignEnd="@id/gasoline"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/gotham_book"
            android:gravity="center"
            android:maxLines="1"
            android:padding="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#212121" />

        <ImageView
            android:id="@+id/diesel"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@+id/stationId"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/gasoline"
            android:contentDescription="@string/diesel"
            android:gravity="center"
            android:padding="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:srcCompat="@drawable/diesel" />

        <TextView
            android:id="@+id/priceDiesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/diesel"
            android:layout_alignStart="@id/diesel"
            android:layout_alignEnd="@id/diesel"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/gotham_book"
            android:gravity="center"
            android:maxLines="1"
            android:padding="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#212121" />

        <ImageView
            android:id="@+id/lpg"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@+id/stationId"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/diesel"
            android:contentDescription="@string/lpg"
            android:padding="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:srcCompat="@drawable/lpg" />

        <TextView
            android:id="@+id/priceLPG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lpg"
            android:layout_alignStart="@id/lpg"
            android:layout_alignEnd="@id/lpg"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/gotham_book"
            android:gravity="center"
            android:padding="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#212121" />
    </RelativeLayout>

    <com.github.curioustechizen.ago.RelativeTimeTextView
        android:id="@+id/lastUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/marker_layout"
        android:layout_alignEnd="@+id/infoLayout"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/gotham_book"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#161616" />

</RelativeLayout>